--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/all.min.css">
   <title>قهوه سرا</title>
 </head>
 
@@ -121,6 +122,62 @@
   </section>
   <!-- Hot section end -->
 
+  <!-- delight -->
+  <section id="delight">
+    <div class="container">
+      <div class="delight">
+        <div class="delight-content">
+          <h1>خوشمزه و لذت بخش</h1>
+          <p>ما اینجا کلی خوردنی خوشمزه داریم , کیک های مختلف برای تولدهای شما انواع قهوه ها و نوشیدنی های خنک
+            و گرم ما دوس داریم شما زمانی که اینجا هستین بهترین لحظاتتون رو پشت سر بزارید پس نگران طعم و مزه
+            نباشید اینجا همه چی خوشمزه و لذت بخشه.</p>
+        </div>
+
+        <div class="delight-img">
+          <img src="./images/delight.jpg" class="img-left" alt="">
+          <img src="./images/delighttwo.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer id="footer">
+    <div class="container">
+      <div class="footer">
+        <div class="about-footer">
+          <h2>درباره ما</h2>
+          <p>ما با داستانی عاشقانه شروع کردیم , داستانی که شروعش با یک قهوه دو نفره بود و حالا هر روز قهوه های دو نفره
+            زوج های عاشق رو اینجا شاهد هستیم .اینجا خونه ی عشقه و ما عاشق قهوه های دونفره ایم همین کافیه تا یه داستان
+            فوق العاده رقم بخوره</p>
+        </div>
+
+        <div class="contact-us">
+          <div class="news-latter">
+            <h2>عضویت خبرنامه</h2>
+            <form>
+              <input type="text" placeholder="ایمیل شما">
+            </form>
+          </div>
+          <div class="social">
+            <h2>دنبال کنید</h2>
+            <ul>
+              <li><a href=""><i class="fab fa-twitter"></i></a></li>
+              <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+              <li><a href=""><i class="fab fa-google-plus-g"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="copy-right">
+      <h2>طراحی شده توسط <a href="./index.html"><i class="fa-solid fa-heart"></i></a></h2>
+      <p>تمامی حقوق مادی و معنوی این طراحی متعلق به <i class="fa-solid fa-heart"></i></p>
+    </div>
+  </footer>
+
+  <script src="./js/all.min.js"></script>
 </body>
 
 </html>
